made an update on my blog

--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -192,7 +192,7 @@ ul.submenu li a.active {
 /* //menu */
 /*-- banner-- */
 .banner-left-side {
-    background: url(../images/b1.jpg);
+    background: url(../images/b1.png);
     background-repeat: no-repeat;
     background-position: center;
     -webkit-background-size: cover;
