added whatsapp chat

--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -209,6 +209,7 @@ ul.submenu li a.active {
 }
 .banner-right-side {
     margin-left: 532px;
+    /* background: url(../images/b1.png); */
 }
 .two-demo-button p {
     color: #000;
