--- a/src/Template/SkillSets.css
+++ b/src/Template/SkillSets.css
@@ -13,8 +13,7 @@
         overflow-y:auto;
         padding: 10px;
         justify-content: flex-start;
-
-             
+        /* white-space: none          */
     }
 }
 
