--- a/src/Template/Work.css
+++ b/src/Template/Work.css
@@ -6,6 +6,28 @@
     margin-bottom: 60px;
 }
 
+.HowHolder {
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.BorderLine {
+  width: 45px;
+  border: 1px solid #3C91DD;
+  margin-left: -75px;
+  margin-top: -60px;
+  margin-bottom: 60px;
+}
+
+@media screen and (max-width: 420px){
+  .BorderLine {
+    margin-top: -10px;
+    margin-bottom: 15px;
+  }
+}
+
 .hexagonWrapper {
     display: flex;
     justify-content:center;
@@ -19,10 +41,78 @@
     align-items:center
 }
 
+.HexContain2 {
+  display: flex;
+  flex-direction:column;
+  width: 150px;
+  align-items:center
+}
+
+.HexContain3 {
+  display: flex;
+  flex-direction:column;
+  width: 150px;
+  align-items:center
+}
+
+.HexContain4 {
+  display: flex;
+  flex-direction:column;
+  width: 150px;
+  align-items:center
+}
+
+@media screen and (max-width: 1024px) {
+  .HexContain4 {
+    margin-top: 45px
+  }
+  .HexContain5 {
+    margin-top: 45px
+  } 
+}
+
+@media screen and (max-width: 970px) {
+  .HexContain4 {
+    margin-top: 0px
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .HexContain4 {
+    margin-top: 45px
+  }
+}
+
+
+.HexContain5 {
+  display: flex;
+  flex-direction:column;
+  width: 150px;
+  align-items:center
+}
+
 @media screen and (max-width: 420px) {
     .HexContain {
-       margin-top: 45px
+       margin-top: 45px;
+       width: 200px;
     }
+    .HexContain2 {
+      margin-top: 55px;
+      width: 200px;
+    }
+    .HexContain3 {
+    margin-top: 55px;
+    width: 200px;
+    }
+    .HexContain4 {
+    margin-top: 55px;
+    width: 200px;
+  }
+  .HexContain5 {
+    margin-top: 55px;
+    width: 200px;
+  }
+
     .How {
         margin-bottom: 15px;
     }
@@ -38,7 +128,7 @@
   .hexagon, 
   .hexagon:before, 
   .hexagon:after {
-    background: #17C6A5;
+    background: #3C91DD;
     box-shadow: 0 0 10px rgba(0,0,0,0.8);   
   }
   
@@ -66,7 +156,7 @@
     left: 0;
     width: 100px;
     height: 55px;
-    background: #17C6A5;
+    background: #3C91DD;
     z-index: 1;
   }
 
@@ -82,7 +172,7 @@
   .hexagon2, 
   .hexagon2:before, 
   .hexagon2:after {
-    background: #3C91DD;
+    background: #17C6A5;
     box-shadow: 0 0 10px rgba(0,0,0,0.8);   
   }
   
@@ -110,7 +200,7 @@
     left: 0;
     width: 100px;
     height: 55px;
-    background: #3C91DD;
+    background: #17C6A5;
     z-index: 1;
   }
 
@@ -127,7 +217,7 @@
   .hexagon3, 
   .hexagon3:before, 
   .hexagon3:after {
-    background: #1F5ABC;
+    background: #3C91DD;
     box-shadow: 0 0 10px rgba(0,0,0,0.8);   
   }
   
@@ -155,7 +245,7 @@
     left: 0;
     width: 100px;
     height: 55px;
-    background: #1F5ABC;
+    background: #3C91DD;
     z-index: 1;
   }
 
@@ -203,3 +293,47 @@
     background: #E85388;
     z-index: 1;
   }
+
+
+
+     
+.hexagon5 {
+  width: 100px;
+  height: 55px;
+  position: relative;
+}
+
+.hexagon5, 
+.hexagon5:before, 
+.hexagon5:after {
+  background: #6271F0;
+  box-shadow: 0 0 10px rgba(0,0,0,0.8);   
+}
+
+.hexagon5:before,
+.hexagon5:after {
+  content: "";
+  position: absolute;
+  left: 22px;
+  width: 57px;
+  height: 57px;
+  transform: rotate(145deg) skew(22.5deg);
+}
+
+.hexagon5:before {
+  top: -29px;
+}
+
+.hexagon5:after {
+  top: 27px;
+}
+
+.hexagon5 span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 55px;
+  background: #6271F0;
+  z-index: 1;
+}
